test/conformance/chainsaw/policy-validation/policy/any-pattern-context /pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  labels:
    app: nginx-users
spec:
  securityContext:
    runAsUser: 115
  containers:
    - name: notnginx
      image: nothingherenginx
      securityContext:
        runAsUser: 250
