test/conformance/chainsaw/policy-validation/policy/any-pattern-context /chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: any-pattern-context
spec:
  steps:
  - name: step-01
    try: 
    - apply:
        file: policy.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true 
        file: pod.yaml
